@@ -1,14 +1,11 @@
 package backend.infrastructure.persistence.adapter;
 
-import backend.domain.models.DomainReservation;
 import backend.domain.ports.repositorys.ISeatRepository;
-import backend.infrastructure.persistence.entities.Reservation;
 import backend.infrastructure.persistence.entities.Seat;
 import backend.infrastructure.persistence.repositorys.ISeatJpaRepository;
 import backend.domain.models.DomainSeat;
 import backend.infrastructure.persistence.mapper.SeatMapper;
 import org.springframework.stereotype.Repository;
-import org.springframework.beans.factory.annotation.Autowired;
 
 import java.util.List;
 import java.util.Optional;
@@ -18,32 +15,43 @@ import java.util.stream.Collectors;
 public class SeatRepositoryAdapter implements ISeatRepository {
 
     private final ISeatJpaRepository seatJpaRepository;
-    private final SeatMapper mapper;
+    private final SeatMapper seatMapper;
 
-    @Autowired
-    public SeatRepositoryAdapter(ISeatJpaRepository seatJpaRepository, SeatMapper mapper) {
+    public SeatRepositoryAdapter(ISeatJpaRepository seatJpaRepository, SeatMapper seatMapper) {
         this.seatJpaRepository = seatJpaRepository;
-        this.mapper = mapper;
+        this.seatMapper = seatMapper;
     }
-
     @Override
-    public DomainSeat save(DomainSeat entity) {
-        Seat seatEntity = mapper.toEntity(entity);
-
-        Seat savedEntity = seatJpaRepository.save(seatEntity);
-        return mapper.toDomain(savedEntity);
-    }
-
-    @Override
-    public Optional<DomainSeat> findById(Long id) {
-        return seatJpaRepository.findById(id).map(mapper::toDomain);
-    }
-
-    @Override
-    public List<DomainSeat> findAll() {
-        return seatJpaRepository.findAll().stream()
-                .map(mapper::toDomain)
+    public List<DomainSeat> findAllById(List<Long> ids) {
+        return seatJpaRepository.findAllById(ids)
+                .stream()
+                .map(seatMapper::toDomain)
                 .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<DomainSeat> getAllSeatsFromHall(Long hallId) {
+        System.out.println("🪑 getAllSeatsFromHall called with hallId = " + hallId);
+        List<Seat> seats = seatJpaRepository.findByHallId(hallId);
+        System.out.println("🪑 Found " + seats.size() + " seat(s) in DB");
+
+        return seats.stream()
+                .map(seatMapper::toDomain)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public DomainSeat save(DomainSeat domainSeat) {
+        Seat entity = seatMapper.toEntity(domainSeat);
+        return seatMapper.toDomain(seatJpaRepository.save(entity));
+    }
+
+    @Override
+    public void saveAll(List<DomainSeat> domainSeats) {
+        List<Seat> entities = domainSeats.stream()
+                .map(seatMapper::toEntity)
+                .collect(Collectors.toList());
+        seatJpaRepository.saveAll(entities);
     }
 
     @Override
@@ -51,17 +59,20 @@ public class SeatRepositoryAdapter implements ISeatRepository {
         seatJpaRepository.deleteById(id);
     }
 
-    public DomainSeat update(DomainSeat dto, Long id){
-        DomainSeat databaseElement = findById(id).orElseThrow(
-                () -> new RuntimeException("Entity with that id couldnt find" + id)
-        );
-        Seat entity = mapper.toEntity(databaseElement);
-        Seat savedEntity = seatJpaRepository.save(mapper.update(entity, dto));
-        return mapper.toDomain(savedEntity);
-
+    @Override
+    public DomainSeat update(DomainSeat dto, Long aLong) {
+        return null;
     }
 
-    public List<DomainSeat> getAllSeatsFromHall(Long hallId){
-        return findAll().stream().filter(m -> m.getHall() == hallId).toList();
+    @Override
+    public Optional<DomainSeat> findById(Long id) {
+        return seatJpaRepository.findById(id).map(seatMapper::toDomain);
+    }
+
+    @Override
+    public List<DomainSeat> findAll() {
+        return seatJpaRepository.findAll().stream()
+                .map(seatMapper::toDomain)
+                .collect(Collectors.toList());
     }
 }
